Fix ITIL footer z-index on mobile

--- a/css/includes/components/itilobject/_footer.scss
+++ b/css/includes/components/itilobject/_footer.scss
@@ -40,6 +40,7 @@
         left: 0;
         right: 0;
         bottom: 8px;
+        z-index: $zindex-fixed;
     }
 
     .action-task {
